# modbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
clients/: llm_client.py  prompt_builder.py
modbot/: __init__.py
modbot/app/: __init__.py
modbot/app/api/: __init__.py  deps.py  schemas.py  server.py
modbot/app/ui/: __init__.py  app.py
modbot/clients/: __init__.py  llm_client.py  prompt_builder.py
modbot/configs/: env.yaml  reward.yaml  tasks.yaml  ui.yaml
modbot/data/easy/: clear_cut_cases.json
modbot/data/hard/: brigading_surge.json
modbot/data/medium/: contextual_cases.json
modbot/deployment/: Dockerfile  hf_space_notes.md  start.sh
modbot/docs/: architecture.md  dependency_flow.md  file_responsibilities.md  folder_map.md  grading_design.md  reward_design.md  structure_plan.md  task_design.md  testing.md  ui_design.md
modbot/env/: __init__.py
modbot/env/actions/: __init__.py  executor.py  validator.py
modbot/env/core/: __init__.py  environment.py  episode_manager.py  transition_engine.py
modbot/env/grader/: __init__.py  base_grader.py  easy_grader.py  factory.py  hard_grader.py  (+3 more)
modbot/examples/: sample_action.json  sample_observation.json  sample_trajectory.json  synthetic_easy_scenario.json
modbot/scripts/: __init__.py  demo_rollout.py  eval.py  local_run.py
modbot/tests/: __init__.py  test_api.py  test_env.py  test_graders.py  test_reward.py  test_tasks.py
scripts/: action_parser.py  inference_runner.py  logging_utils.py
server/: __init__.py  app.py
(+42 files in other folders)
